# irs-990-parser

./: .python-version  LICENSE  README.md  features.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
db_scripts/: org_table.sql
requirements/: common.txt  dev.txt
src/: main.py
src/irs990_parser/: constants.py  custom_exceptions.py  downloader.py  extractor.py  gender_guesser.py  irs_field_extractor.py  link_retriever.py  loader.py
tests/: test_download.py  test_downloader.py  test_extractor.py  test_gender_guesser.py  test_irs_field_extractor.py  test_link_retriever.py  test_loader.py
tests/sample_irs_xml_files/compensation_review/ceo/: bool_ind_true.xml  false.xml  missing.xml  true.xml
tests/sample_irs_xml_files/compensation_review/other/: bool_ind_false.xml  bool_ind_true.xml  false.xml  missing.xml  true.xml
tests/sample_irs_xml_files/ein/: contains_ein.xml  missing_ein.xml
tests/sample_irs_xml_files/key_employees/: both.xml  missing.xml  missing_schedule_j.xml  no_female.xml  no_key_employees.xml  no_male.xml  no_non_key_employees.xml
tests/sample_irs_xml_files/org_name/: missing_filer.xml  missing_name.xml  multiple_line_name.xml  one_line_name.xml
tests/sample_irs_xml_files/total_compensation/: compensation.xml  no_compensation.xml
tests/sample_irs_xml_files/total_employees/: missing_employees.xml  multiple_employees.xml  zero_employees.xml
tests/sample_irs_xml_files/trustees/: 202303569339300400_public.xml:Zone.Identifier  both.xml  missing.xml  no_female.xml  no_male.xml  no_trustees.xml  original.xml
tests/sample_irs_xml_files/whistleblower_policy/: false.xml  missing_policy.xml  true.xml
