[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irs-990-parser"
version = "0.0.0"
dependencies = []
requires-python = ">= 3.13"
authors = [
   {name = "Ryan Shiraki", email = "shirakrk@rose-hulman.edu"}
]
maintainers = [
  {name = "Ryan Shiraki", email = "shirakrk@rose-hulman.edu"}
]
description = "Parses IRS 990 forms for specific responses/sections"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = "src"
