[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irs-990-parser"
version = "0.0.0"
dependencies = [
  "beautifulsoup4",
  "gender-guesser",
  "lxml",
  "mysql-connector-python",
  "pandas",
  "pydantic",
  "requests",
  "SQLAlchemy",
]
requires-python = ">= 3.6"
authors = [
   {name = "Ryan Shiraki", email = "shirakrk@rose-hulman.edu"}
]
maintainers = [
  {name = "Ryan Shiraki", email = "shirakrk@rose-hulman.edu"}
]
description = "Parses IRS 990 forms for specific responses/sections"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest", "pytest-unordered"]

[tool.pytest.ini_options]
pythonpath = "src"
